--- a/style.css
+++ b/style.css
@@ -10,13 +10,23 @@ body{
 }
 .card{
     width: 90%;
-    max-width: 470px;
+    max-width: 450px;
     background: linear-gradient(135deg, #d4b4ed, #b168ed);
     color: #fff;
     margin: 30px auto 0;
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
+}
+.title{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-bottom: 20px;
+}
+.title h1{
+    font-size: 30px;
+    color: #ffff;
 }
 .search{
     width: 100%;
@@ -76,11 +86,11 @@ body{
     text-align: left;
 }
 .col img{
-    width: 40px;
+    width: 30px;
     margin-right: 10px;
 }
 .humidity, .wind{
-    font-size: 28px;
+    font-size: 20px;
     margin-top: -6px;
 }
 .weather{
